--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,6 @@
     <string name="nav_header_title">Smart Recipe</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-
     <string name="menu_home">Home</string>
     <string name="menu_categories">Categories</string>
     <string name="menu_subscription">Subscription</string>
@@ -13,9 +12,7 @@
     <string name="menu_recipe">Recipe</string>
     <string name="menu_how_it_works">How it Works</string>
     <string name="menu_about">About</string>
-    <string name="about_text">Smart Recipe is a food-focused mobile application with hundreds of easy and tasty
-    recipes.All recipes use simple ingredients that are easily available and inexpensive.\n\nIf you are intrested in
-    learning how to cook healthy and yet simple recipes you're in the right place.</string>
+    <string name="about_text">Smart Recipe is a food-focused mobile application with hundreds of easy and tasty recipes.\nAll recipes use simple ingredients that are easily available and inexpensive.\nIf you are interested in learning how to cook healthy and yet simple recipes you\'re in the right place.</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="share">Share</string>
 
