--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,15 @@
     <string name="menu_recipe">Recipe</string>
     <string name="menu_how_it_works">How it Works</string>
     <string name="menu_about">About</string>
+    <string name="menu_text">Find the perfect food recipes category that you want.</string>
+    <string name="menu_subtext">Discover 200+ recipes and seasonal collections.</string>
+    <string name="search_text">Find the specific recipe you\'re looking for with search.</string>
+    <string name="search_subtext">Quickly find your recipe by tags or keywords.</string>
+    <string name="pick_text">Pick out a recipe of your choice, click and get the exact details.</string>
+    <string name="pick_subtext">Visualize a beautiful way to prepare your food.</string>
+    <string name="learn_text">Learn.</string>
+    <string name="share_text">Share.</string>
+    <string name="share_subtext">Share the recipe with your friends and family.</string><string name="learn_subtext">Each recipe includes nutritional information so you can always make healthy choice .</string>
     <string name="about_text">Smart Recipe is a food-focused mobile application with hundreds of easy and tasty recipes.\nAll recipes use simple ingredients that are easily available and inexpensive.\nIf you are interested in learning how to cook healthy and yet simple recipes you\'re in the right place.</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="share">Share</string>
