Implemented the logic to allow or deny access to recipes depending on subscription in HomeViewModel.kt and MainActivity.kt.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="recipe_activity_diet_labels">Diet Labels</string>
     <string name="recipe_activity_health_labels">Health Labels</string>
     <string name="recipe_activity_cautions">Cautions</string>
+    <string name="subscription">Subscription</string>
 </resources>
