--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="share">Share</string>
     <string name="text_home">Welcome to smart recipes where cooking is made simple.</string>
-    <string name="sub_text_home">Find  2000+ healthy recipes in the categories section.\n\tEnjoy!!</string>
+    <string name="sub_text_home">Find  2000+ healthy recipes  in the categories section after you subscribe .\nEnjoy!!</string>
     <string name="show_breakfast">Breakfast</string>
     <string name="show_lunch">Lunch</string>
     <string name="show_dinner">Dinner</string>
